2006-06-26  Sven Panne  <sven.panne@aedion.de>

	* admin/autotools/.indent.pro: Added ALSA types.

2006-06-23  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, src/Makefile.am, src/al_ext.c, src/al_main.c,
	src/backends/alc_backend_alsa.c, src/backends/alc_backend_arts.c,
	src/backends/alc_backend_esd.c, src/backends/alc_backend_sdl.c,
	src/extensions/al_ext_vorbis.c: Use our dlopen wrapper. Rework of
	the ALSA backend, capturing is currently broken and will be fixed
	soon. Note that we do not use symbol versioning anymore and rely
	on the new ALSA API.

	* src/al_dlopen.c, src/al_dlopen.h: Added dlopen wrapper, so the
	step towards libltdl is straightforward.

	* src/al_filter.c, src/al_mixer.c, src/al_types.h,
	src/alc/alc_context.c, src/alc/alc_context.h, src/alc/alc_device.c,
	src/backends/alc_backend.h, src/backends/alc_backend_alsa.c,
	src/backends/alc_backend_arts.c, src/backends/alc_backend_bsd.c,
	src/backends/alc_backend_darwin.c, src/backends/alc_backend_irix.c,
	src/backends/alc_backend_linux.c, src/backends/alc_backend_morphos.c,
	src/backends/alc_backend_null.c, src/backends/alc_backend_sdl.c,
	src/backends/alc_backend_solaris.c, src/backends/alc_backend_wave.c,
	src/backends/alc_backend_windows.c: Improved naming a bit to make the
	units clearer. There seems to be a confusion between bytes and frames
	from time to time.

2006-06-14  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, config-osx.h, configure.ac, src/al_ext.c: Replaced
	NODLOPEN with USE_DLOPEN, because inverted logic is harder to understand
	in general.

	* CMakeLists.txt, ChangeLog, src/Makefile.am, src/al_ext.h,
	src/al_main.c, src/al_queue.c, src/al_source.c, src/alc/alc_device.c,
	src/backends/alc_backend.c, src/backends/alc_backend_alsa.c,
	src/backends/alc_backend_darwin.c, src/backends/alc_backend_irix.c,
	src/backends/alc_backend_linux.c, src/backends/alc_backend_morphos.c:
	Moved config handling to a separate directory.
